baculum: Add endpoint to create directory on storage daemon host
