# gui/baculum/protected/API/openapi_baculum.json
@@ -10314,6 +10314,47 @@
 				]
 			}
 		},
+		"/api/v2/plugins/core/{storageid}/storage/dircreate": {
+			"get": {
+				"tags": ["plugins"],
+				"summary": "Create directory on the storage daemon host",
+				"description": "Create directory on the storage daemon host",
+				"responses": {
+					"200": {
+						"description": "Create directory on the storage daemon host",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"output": {
+											"type": "array",
+											"items": {
+												"description": "Create directory result",
+												"type": "string"
+											}
+										},
+										"error": {
+											"type": "integer",
+											"description": "Error code",
+											"enum": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 20, 150, 1000]
+										}
+									}
+								}
+							}
+						}
+					}
+				},
+				"parameters": [
+					{
+						"$ref": "#/components/parameters/StorageId"
+					},
+					{
+						"$ref": "#/components/parameters/Output"
+					}
+				]
+			}
+		},
 		"/api/v2/plugins/m365/{clientid}/tenants": {
 			"get": {
 				"tags": ["plugins"],
